--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
     </div>
 <nav>
     <ul class="nav">
-        <li routerLink="/products">PRODUCTOS</li>
+        <li routerLink="/products" id="productos">PRODUCTOS</li>
         <li routerLink="/contact">CONTACTO</li>
     </ul>
 </nav>
