--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -36,11 +36,6 @@ h1, h2, h3, h4 {
     box-shadow: 10px 6px 20px 0px rgba(0,0,0,0.18);
     min-width: fit-content;
 }
-.category > ul > li {
-    letter-spacing: 2px;
-    font-size: 18px;
-    margin-top: 10px;
-}
 #categorias-text {
     background: radial-gradient(#ffee93, #eab941);
     margin-bottom: 30px;
@@ -51,29 +46,89 @@ h1, h2, h3, h4 {
     margin-top: 30px;
     user-select: none;
 }
+.text-delete-btn-container {
+    width: 100%;
+}
 #color-text {
     margin: 30px 0;
     font-weight: 800;
 }
-.color-text {
-    margin-top: 0 !important;
+#talle-text {
+    margin: 30px 0;
+    font-weight: 800;
 }
-#colores {
+#price-filter-text {
+    margin: 30px 0;
+    font-weight: 800;
+}
+.price-filter-container {
+    display: flex;
+    gap: 20px;
+    margin: 0 20px;
+    width: fit-content;
+}
+.price-filter-container > div {
+    width: 50%;
+}
+.price-filter-container > div > label {
+    padding: 0;
+    margin: 0;
+}
+.price-filter-container > div > input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0 0 0;
+    box-sizing: border-box;
+}
+.price-filter-btn {
+    border-radius: 100px;
+    border: none;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px 80px 0 0;
+    margin: 15px auto;
+}
+.price-filter-btn > i {
+    font-size: 22px;
+}
+/* REMOVE INPUT TYPE BUTTON ARROWS */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+/* FIN */
+.color-text {
+    margin-top: 0 !important;
+    display: flex;
+    justify-content: space-between;
+}
+.color-text > p {
+    width: 100%;
+    text-align: start;
+    padding: 0 15px;
 }
 #colores > li {
     list-style: none;
-    width: 0%;
-    padding-left: 10px;
+    width: 40px;
+    margin-left: 15px;
 }
-#colores:hover {
+#colores > .text-delete-btn-container > li > p:hover {
     font-weight: 600;
     transition: 0.1s ease-out;
 }
-#categorias:hover {
+#categorias > li > p:hover {
+    font-weight: 600;
+    transition: 0.1s ease-out;
+}
+.talle-nombre:hover {
     font-weight: 600;
     transition: 0.1s ease-out;
 }
@@ -83,9 +138,26 @@ h1, h2, h3, h4 {
     height: 20px;
     border: 1px solid #000;
     border-radius: 50px;
+    margin: 5px 0;
 }
 .cursor {
     cursor: pointer;
+}
+.delete-btn {
+    box-shadow: none;
+    font-size: 20px;
+    padding: 0;
+    margin: 0 10px;
+    width: 20px;
+    height: 100%;
+    align-self: center;
+    color: #000;
+    font-weight: 500;
+    letter-spacing: 2px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    border: none;
+    box-shadow: 10px 8px 20px 0px rgba(0,0,0,0.18);
 }
 .products-container {
     width: 80%;
@@ -103,12 +175,12 @@ h1, h2, h3, h4 {
     display: grid;
     align-self: end;
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
-    cursor: pointer;
 }
 .product-img {
     display: grid;
     align-self: end;
     position: relative;
+    cursor: pointer;
 }
 .layout {
     position: absolute;
@@ -121,6 +193,9 @@ h1, h2, h3, h4 {
     transition: 0.2s ease-in-out;
     background: rgba(0,0,0,0.5);
 }
+.product-img > img {
+    margin: auto;
+}
 .product-details {
     padding: 20px;
     line-height: 1.5;
@@ -130,6 +205,7 @@ h1, h2, h3, h4 {
     max-width: 200px;
     box-sizing: border-box;
     text-align: center;
+    overflow-wrap: break-word;
 }
 .product-details > h3 {
     font-size: 20px;
@@ -174,6 +250,10 @@ button {
     text-transform: uppercase;
     border: none;
     box-shadow: 10px 8px 20px 0px rgba(0,0,0,0.18);
+    cursor: pointer;
+}
+button:hover {
+    background: radial-gradient(#ffee93, #fd9b34);
 }
 .modal-container {
     display: none;
@@ -239,6 +319,18 @@ input, select {
 @media screen and (max-width: 820px) {
     .category {
         display: none;
+        opacity: 0;
+        transform: scaleY(0);
+        transform-origin: top;
+        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    }
+    .smooth-sliding {
+        opacity: 1;
+        transform: scaleY(1);
+    }
+    .smooth-sliding-close {
+        opacity: 0;
+        transform: scaleY(0);
     }
     .filters-container {
         display: flex;
@@ -264,12 +356,57 @@ input, select {
     .category {
         flex-direction: column;
         width: 100%;
+        gap: 10px;
     }
     .category > ul {
         list-style: none;
+        display: flex;
+        justify-content: center;
+    }
+    .category > ul > li {
+        text-align: start;
+    }
+    #categorias > li {
+        width: 60px;
+    }
+    #categorias:hover {
+        font-weight: 600;
+        transition: 0.1s ease-out;
     }
     #colores {
-        justify-content: center;
+        display: flex;
+        align-items: center;
+    }
+    #colores > .color-text:hover {
+        font-weight: 600;
+        transition: 0.1s ease-out;
+    }
+    .user-styles {
+        justify-content: start!important;
+        width: 40%!important;
+        margin: auto!important;
+    }
+    .user-styles > li {
+        width: 100%!important;
+        justify-content: start!important;
+        text-align: center!important;
+    }
+    .user-styles > .talle-nombre {
+        display: unset;
+    }
+    .admin-styles {
+        margin: 0!important;
+    }
+    .admin-styles > .color-swatch {
+        width: 30px;
+        margin: 0 10px 0 20px;
+    }
+    .admin-styles > .color-text {
+        width: 100% !important;
+    }
+    .admin-styles > li {
+        width: 100%!important;
+        margin-left: 10px!important;
     }
     .products-container {
         width: 100%;
@@ -307,10 +444,81 @@ input, select {
     #color-name-label {
         text-align: center;
     }
+    #talle-name-label {
+        text-align: center;
+    }
     #color-input {
         margin: 10px auto 0;
     }
     #color-add-btn {
         margin: 10px;
     }
+    #talle-add-btn {
+        margin: 10px;
+    }
+}
+
+.user-styles {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 10px 0 0 0;
+}
+.user-styles .color-swatch {
+    min-width: 20px;
+    width: 20px;
+    margin: 5px 0;
+}
+.user-styles .text-delete-btn-container {
+    width: 40px;
+    margin-left: 15px;
+}
+.user-styles .color-text {
+    overflow-wrap: unset;
+}
+.user-styles .color-text > p {
+    padding: 0;
+}
+.user-styles > li {
+    letter-spacing: 2px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    overflow-wrap: unset;
+}
+.user-styles > li > p {
+    width: 80px;
+    text-align: start;
+}
+.admin-styles {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 80px 0 0;
+    width: 100%;
+}
+.color-styles {
+    box-sizing: border-box;
+    padding-left: 10px;
+}
+.admin-styles > li {
+    letter-spacing: 2px;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+    overflow-wrap: anywhere;
+    width: 100%;
+}
+.admin-styles > li > p {
+    width: 100%;
+    text-align: start;
+    padding: 0 10px 0 20px;
+}
+.admin-styles .color-swatch {
+    margin: 0 10px 0 10px;
+    width: 25px;
+}
+.admin-styles .talle-nombre {
+    margin-left: 20px;
 }
