--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<body [class.dark-theme]="darkTheme">
 <div class="supercontainer">
 <div class="title">
     <h1>Iniciar sesión</h1>
@@ -16,4 +17,5 @@
 </form>
 </div>
 </div>
+</body>
 <app-footer></app-footer>
