--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,36 @@
     margin: 0;
     padding: 0;
 }
+
+.dark-theme {
+    background: #000;
+    color: #fff;
+}
+.dark-theme .category > #categorias-text {
+    color: #000;
+}
+.dark-theme .category > #filtros-text {
+    color: #000;
+}
+.dark-theme .modal-container > .modal {
+    border: 1px solid #fff;
+}
+.dark-theme .modal-container .modal > .div-modal {
+    background: #2d2d2d;
+    color: #fff;
+}
+.dark-theme .products-container > .products {
+    background: #000;
+    color: #fff;
+}
+.dark-theme .container .details #modal-container #add-color-form .add-color-modal {
+    border: 1px solid #fff;
+}
+.dark-theme .container .details #modal-container #add-color-form .add-color-modal > .div-modal {
+    background: #2d2d2d;
+    color: #fff;
+}
+.dark-theme .container .details #modal-container #add-color-form .add-color-modal > #add-color-btn-container {
+    background: #2d2d2d;
+    color: #fff;
+}
