--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -197,5 +197,14 @@
         </div>
     </form>
 </div>
+<div class="modal-container" id="delete-warning-modal">
+    <div class="div-modal">
+        <h4>{{warningText}}</h4>
+        <div class="delete-warning-modal-buttons">
+            <button #warningYes>Aceptar</button>
+            <button #warningNo>Cerrar</button>
+        </div>
+    </div>
+</div>
 </body>
 <app-footer></app-footer>
