--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,7 @@
     background: #2d2d2d;
     color: #fff;
 }
+.dark-theme #delete-warning-modal .div-modal {
+    background: #2d2d2d;
+    color: #fff;
+}
